add multi-result driving

--- a/src/MRScpOptSize/MRScpOptSize/MRScpOptSize.fsproj
+++ b/src/MRScpOptSize/MRScpOptSize/MRScpOptSize.fsproj
@@ -52,6 +52,7 @@
     <Compile Include="Driving.fs" />
     <Compile Include="ConfGraphs.fs" />
     <Compile Include="StdScp.fs" />
+    <Compile Include="MultiDrive.fs" />
     <Compile Include="ExtExp.fs" />
     <Compile Include="Residualize.fs" />
     <Compile Include="Parsec.fs" />
